# sermon

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  config.yaml  description.txt  pyproject.toml  requirements.txt  schema.sql  todo.md
app/: cli.py  config.py  db.py  errors.py  main.py  schema.sql  utils.py
app/commands/: add.py  attach.py  backup.py  delete.py  edit.py  export.py  files.py  list.py  new.py  open.py  podcast.py  remove.py  search.py  service.py  show.py
app/presentation/: common.py  edit_sermon.py  new_sermon.py  sermon_card.py  sermon_list.py  theme.py
app/services/: delete_sermon.py  edit_manuscript.py  edit_recording.py  edit_resource.py  edit_sermon.py  edit_service.py  export_html.py  export_podcast.py  list_sermons.py  new_sermon.py  open.py  podcast.py  search_sermons.py  sermon_draft.py  show_sermon.py  upload.py
app/templates/: podcast.xml.j2  sermon.css  sermon.html.j2  sermon.js
app/tools/: files.py  import_xml.py
