
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sermon"
version = "0.1.0"
description = "Predikoarkiv – CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "send2trash>=1.8",
]

[project.scripts]
sermon = "app.cli:run"
