
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sermon"
version = "1.0.0"
description = "Predikoarkiv – CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "send2trash>=1.8",
    "mutagen>=1.47.0",
    "pypdf>=4.0.0",
    "jinja2>=3.1",
    "requests",
]

[project.scripts]
sermon = "app.main:main"
